--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -5356,7 +5356,7 @@ span.reportDatem {
     margin-top: 0px!important;
   }
 
-   .header-publications .brush .brushTop {
+   .header-publications .brushTop {
     margin-top: 100px!important;
   }
 
@@ -5366,7 +5366,7 @@ span.reportDatem {
     margin-top: 0px!important;
   }
 
-   .header-publications-min .brush .brushTop {
+   .header-publications-min .brushTop {
     margin-top: 60px!important;
   }
 
