--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -5359,9 +5359,7 @@ span.reportDatem {
    .header-publications .brushTop {
     margin-top: 100px!important;
   }
-
-  
-  
+    
    .header-publications-min #prtlSearch {
     margin-top: 0px!important;
   }
@@ -5585,6 +5583,24 @@ span.reportDatem {
 
 /*PHONE*/
 @media (max-width: 725px) {
+  .header-publications #prtlSearch {
+    margin-top: 100px!important;
+  }
+
+   .header-publications .brushTop {
+    margin-top: 94px!important;
+    margin-bottom: 20px;
+  }
+    
+   .header-publications-min #prtlSearch {
+    margin-top: 100px!important;
+  }
+
+   .header-publications-min .brushTop {
+    margin-top: 94px!important;
+    margin-bottom: 20px;
+  }
+
   #prtlPublicationsl .publis img.par, #prtlPublications .publis img.par{
     margin-left: -17px!important;
   }
