--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -5587,7 +5587,7 @@ span.reportDatem {
     margin-top: 100px!important;
   }
 
-   .header-publications .brushTop {
+   .header-publications .brush {
     margin-top: 94px!important;
     margin-bottom: 20px;
   }
@@ -5596,7 +5596,7 @@ span.reportDatem {
     margin-top: 100px!important;
   }
 
-   .header-publications-min .brushTop {
+   .header-publications-min .brush {
     margin-top: 94px!important;
     margin-bottom: 20px;
   }
