--- a/themes/default/partials/site/footer.htm
+++ b/themes/default/partials/site/footer.htm
@@ -5,7 +5,10 @@
 
   function onStart()
   {
-    //$this['home'] = $this->staticApp->getHomeVars();
+    if($this->staticApp->getHomeVars()){
+      $this['home'] = $this->staticApp->getHomeVars();
+    }
+    
   }
 
 ?>
