--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -5600,6 +5600,13 @@ span.reportDatem {
 
 /*PHONE*/
 @media (max-width: 725px) {
+  
+  .header-publications h1 {
+      margin-top: -150px!important;
+      margin-bottom: -40px!important;
+      margin-left: 0px!important;
+     
+  }
   .header-publications #prtlSearch {
     margin-top: 100px!important;
   }
