--- a/themes/default/partials/site/menu.htm
+++ b/themes/default/partials/site/menu.htm
@@ -198,9 +198,9 @@
     <a href="{{url('/')}}/en{{this.page.url}}" class="lang {{(lang=='en')?'active-lang':''}}">EN</a>
     <a class="separator separator-lang"> · </a>
     <a href="{{url('/')}}/es{{this.page.url}}" class="lang-es {{(lang=='es')?'active-lang':''}}">ES</a>
-    <a class="separator separator-lang"> · </a> <a href="{{url('/')}}/fr{{this.page.url}}" class="lang {{(lang=='fr')?'active-lang':''}}">FR</a>
+    <!-- <a class="separator separator-lang"> · </a> <a href="{{url('/')}}/fr{{this.page.url}}" class="lang {{(lang=='fr')?'active-lang':''}}">FR</a>
     <a class="separator separator-lang"> · </a><a href="{{url('/')}}/de{{this.page.url}}" class="lang {{(lang=='de')?'active-lang':''}}">DE</a>
-    <a class="separator separator-lang"> · </a> <a href="{{url('/')}}/ru{{this.page.url}}" class="lang {{(lang=='ru')?'active-lang':''}}">RU</a></p>
+    <a class="separator separator-lang"> · </a> <a href="{{url('/')}}/ru{{this.page.url}}" class="lang {{(lang=='ru')?'active-lang':''}}">RU</a></p> -->
 </div>
 
 <!-- MENÚ MOBILE -->
