--- a/themes/default/partials/allpublications.htm
+++ b/themes/default/partials/allpublications.htm
@@ -38,7 +38,12 @@
             <div class="contint">
               <img class="publi-icon par" src="{{preurl}}/storage/app/media/uploaded-files/templates/pb2-icon.svg" alt="">
               {% set ints = publication.viewBag.interests|split(',') %}
-              <span>{{ints[0]|_}} Y {{ints[1]|_}}</span>
+              {% if ints[1]|length<1 %}
+                <span>{{ints[0]|_}}</span>
+              {% endif %}
+              {% if ints[1]|length>0 %}
+                <span>{{ints[0]|_}} Y {{ints[1]|_}}</span>
+              {% endif %}
             </div>
           </div>
           <img class="publi-icon" src="{{preurl}}/storage/app/media/uploaded-files/templates/pb3-icon.svg" alt="">
