--- a/themes/default/partials/allpublications.htm
+++ b/themes/default/partials/allpublications.htm
@@ -13,18 +13,21 @@
 ?>
 
 ==
+
 {% if publications|length > 0 %}
 <div class="publis">
 {% for publication in publications %}
     <div class='contpbl'>
       <div class="bimage" style="background-image:url({{publication.viewBag.urlimage}}); background-repeat: no-repeat; background-size: cover;">
         <div class="links-container">  
-          {% if publication.viewBag.urlExternaZip !='' %}
-            <a class="download-link" target="_blank" href="{{publication.viewBag.urlExternaZip}}">{{'Descargar'|_}}</a>
-          {% endif %}
-           {% if publication.viewBag.urlExternaVideo !='' %}
+          {% if publication.viewBag.urlExternaVideo !='' %}
             <a class="see-link" target="_blank" href="{{publication.viewBag.urlExternaVideo}}">{{'Ver'|_}} {{publication.viewBag.type|_}} </a>
           {% endif %}
+          {% if publication.viewBag.urlExternaZip !='' %}
+            <a class="download-link download-link-pub" target="_blank" href="{{publication.viewBag.urlExternaZip}}-#@-{{publication.viewBag.idiomas}}">{{'Descargar'|_}}</a>
+            <!--<a class="download-link" target="_blank" data-izimodal-title="{{publication.viewBag.urlExternaZip}}" data-izimodal-open="#modal-pub">{{'Descargar'|_}}-->
+          {% endif %}
+          
         </div>
       </div>
       <div class="shr">
@@ -49,21 +52,20 @@
           <img class="publi-icon" src="{{preurl}}/storage/app/media/uploaded-files/templates/pb3-icon.svg" alt="">
           <div class="contplangs">
             <span>{{publication.viewBag.idiomas|replace({ ',': ', '})}}</span>
-          </div>
-        
+          </div>        
         <p class="publi-desc publi-descn">{{publication.viewBag.descrptn}}</p>
         <p class="publi-desc publi-descm">{{publication.viewBag.descrptn|length > 90 ? publication.viewBag.descrptn|slice(0, 91) ~ '...' : publication.viewBag.descrptn}}</p>
 
         <div class="links-container-m">                  
-          {% if publication.viewBag.urlExternaZip !='' %}
-            <a class="download-link" target="_blank" href="{{publication.viewBag.urlExternaZip}}">{{'Descargar'|_}}</a>
-          {% endif %}
-           {% if publication.viewBag.urlExternaVideo !='' %}
+          {% if publication.viewBag.urlExternaVideo !='' %}
             <a class="see-link" target="_blank" href="{{publication.viewBag.urlExternaVideo}}">{{'Ver'|_}} {{publication.viewBag.type|_}}</a>
           {% endif %}
-        </div>
-       
+          {% if publication.viewBag.urlExternaZip !='' %}
+          <a class="download-link download-link-pub" target="_blank" href="{{publication.viewBag.urlExternaZip}}-#@-{{publication.viewBag.idiomas}}">{{'Descargar'|_}}</a>
+           <!--<a class="download-link" target="_blank" name="{{publication.viewBag.urlExternaZip}}" data-izimodal-open="#modal-pub">{{'Descargar'|_}}-->
+          {% endif %}
           
+        </div>
       </div>
     </div>
 {% endfor %}
@@ -76,5 +78,10 @@
 	<p>Vuelve más tarde, tendremos un montón de publicaciones para ti.</p>
 </div>
 
-
 {% endif %}
+<!-- SCRIPTS -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.full.min.js"></script>
+<script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/style2.js"></script>
+
+    
