--- a/themes/default/layouts/publicacion.htm
+++ b/themes/default/layouts/publicacion.htm
@@ -183,6 +183,26 @@ code = "redes-sociales"
     
     {% partial 'site/footer' %}
 
+    <div id="modal-pub"> <!-- data-iziModal-fullscreen="true"  data-iziModal-title="Welcome"  data-iziModal-subtitle="Subtitle"  data-iziModal-icon="icon-home" -->
+        <!-- Modal content -->
+        <div class="modal-container">
+            <img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/pubdwl.svg">
+            <img id="close-modal-pub" data-izimodal-close="#modal-pub" class="close-modal" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/close-modal.svg">
+            <p id="urlpubh"></p>
+            <h3>{{'¿Quieres descargar esta publicación?'|_}}</h3>
+            <p>{{'Esta publicaciónse encuentra en diferentes idiomas, selecciona el tuyo y llévate la publicación contigo.'|_}}</p>
+            <form id = "modalSendPub" class="">
+              <div id="contentpubslc">
+                <div id="langPub" class="" name="lang">Selecciona un idioma <img id='pubarr' src="{{url('/')}}/plugins/rainlab/pages/assets/svg/pubarrd.svg">
+                </div>
+                <div id="slctoptpub">
+                </div>
+              </div>
+              <a id="aPubHref" href="">Descargar publicación</a>
+            </form>
+        </div> 
+    </div> 
+
     <!-- SCRIPTS -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.full.min.js"></script>
