--- a/themes/default/layouts/publicacion.htm
+++ b/themes/default/layouts/publicacion.htm
@@ -190,10 +190,11 @@ code = "redes-sociales"
             <img id="close-modal-pub" data-izimodal-close="#modal-pub" class="close-modal" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/close-modal.svg">
             <p id="urlpubh"></p>
             <h3>{{'¿Quieres descargar esta publicación?'|_}}</h3>
-            <p>{{'Esta publicaciónse encuentra en diferentes idiomas, selecciona el tuyo y llévate la publicación contigo.'|_}}</p>
+            <p>{{'Esta publicación se encuentra en diferentes idiomas, selecciona el tuyo y llévate la publicación contigo.'|_}}</p>
             <form id = "modalSendPub" class="">
               <div id="contentpubslc">
-                <div id="langPub" class="" name="lang">Selecciona un idioma <img id='pubarr' src="{{url('/')}}/plugins/rainlab/pages/assets/svg/pubarrd.svg">
+                <img id='pubicon' src="{{url('/')}}/plugins/rainlab/pages/assets/svg/pubicon.svg">
+                <div id="langPub" class="" name="lang"> Selecciona un idioma <img id='pubarr' src="{{url('/')}}/plugins/rainlab/pages/assets/svg/pubarrd.svg">
                 </div>
                 <div id="slctoptpub">
                 </div>
