style="margin-top: 10px;"

--- a/themes/default/partials/allpublications.htm
+++ b/themes/default/partials/allpublications.htm
@@ -26,8 +26,7 @@
             <a class="download-link" style="visibility:hidden">{{'Ver'|_}} {{publication.viewBag.type|_}} </a>
           {% endif %}
           {% if publication.viewBag.urlExternaZip !='' %}
-            <br>
-            <a class="see-link download-link-pub" target="_blank" href="{{publication.viewBag.urlExternaZip}}-#@-{{publication.viewBag.idiomas}}">{{'Descargar'|_}}</a>
+            <a class="see-link download-link-pub" style="margin-top: 10px;" target="_blank" href="{{publication.viewBag.urlExternaZip}}-#@-{{publication.viewBag.idiomas}}">{{'Descargar'|_}}</a>
             <!--<a class="download-link" target="_blank" data-izimodal-title="{{publication.viewBag.urlExternaZip}}" data-izimodal-open="#modal-pub">{{'Descargar'|_}}-->
           {% endif %}
           
@@ -66,8 +65,7 @@
             <a class="download-link" style="visibility:hidden">{{'Ver'|_}} {{publication.viewBag.type|_}} </a>
           {% endif %}
           {% if publication.viewBag.urlExternaZip !='' %}
-          
-          <a class="see-link download-link-pub" target="_blank" href="{{publication.viewBag.urlExternaZip}}-#@-{{publication.viewBag.idiomas}}">{{'Descargar'|_}}</a>
+          <a class="see-link download-link-pub" style="margin-top: 10px;" target="_blank" href="{{publication.viewBag.urlExternaZip}}-#@-{{publication.viewBag.idiomas}}">{{'Descargar'|_}}</a>
            <!--<a class="download-link" target="_blank" name="{{publication.viewBag.urlExternaZip}}" data-izimodal-open="#modal-pub">{{'Descargar'|_}}-->
           {% endif %}
           
