--- a/modules/backend/layouts/_mainmenu.htm
+++ b/modules/backend/layouts/_mainmenu.htm
@@ -67,6 +67,24 @@
                             
                             <?php if( $this->user->is_superuser == 1 ){ ?>
                                 <li class="svg-icon-container svg-active-effects">
+                                    <a href="/backend/backend/media">
+                                        <span class="nav-icon">
+                                            <?php if ($item->iconSvg): ?>
+                                                <img class="svg-icon" src="<?= config('app.urlApp') ?>modules/system/assets/images/media-icon.svg">
+                                            <?php endif ?>
+
+                                            <i class="<?= $item->iconSvg ? 'svg-replace' : null ?> <?= $item->icon ?>"></i>
+                                        </span>
+
+                                        <span class="nav-label">
+                                           Media
+                                        </span>
+                                    </a>
+                                </li>
+                            <?php } ?>
+
+                            <?php if( $this->user->is_superuser == 1 ){ ?>
+                                <li class="svg-icon-container svg-active-effects">
                                     <a href="/backend/backend/intereses">
                                         <span class="nav-icon">
                                             <?php if ($item->iconSvg): ?>
