--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -28,7 +28,7 @@
 	{% endif %}
 </div>  -->
 
-<div id="st-empresas" class="search-title-container">
+<div id="st-empresasb" class="search-title-container">
 	{% if empcount > 1 %}
 	<p class="title-search"> {{ 'Hemos encontrado'|_ }} {{empcount}} {{ 'empresas que se adaptan a ti'|_ }}.</p>
 	{% else %}
