cadiz correcciones lydia

--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -35,7 +35,7 @@
 	 <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{empcount}} {{ 'empresa que se adapta a ti'|_ }}.</p>
 	{% endif %}
 </div>	
-<div id="all-empresas" class="all-events-container">
+<div id="all-empresas" class="all-events-container" style="background-color:white!important">
 	{% for empresa in empresas %}
 
 		<div class="event">
