--- a/themes/default/partials/site/searchempresab.htm
+++ b/themes/default/partials/site/searchempresab.htm
@@ -31,7 +31,7 @@
               
               <div id="empresa-inputs-container" class="inputs-container">
               
-                <div style='width: 100%!important; border-top-left-radius:4px!important' id="empresa-search" class="days-container empresa-search">
+                <div style='width: 100%!important; border-top-right-radius:4px!important' id="empresa-search" class="days-container empresa-search">
                   <input id="inpSearch" type="text" name="search" placeholder="¿Qué estás buscando?" value="">
                   <span class="select-title">{{ 'NOMBRE DE EMPRESA'|_ }}</span>
                 </div>
