-mod: changes css events

--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -51,7 +51,19 @@
       font-size: 144px;
       transform: rotate(-9deg);
       text-align: center;
-      font-family: Ryssa; }
+      font-family: Ryssa; 
+    }
+    .header-empresa .header-txt .txt {
+      font-size: 144px;
+      transform: rotate(-9deg);
+      text-align: center;
+      font-family: Ryssa; 
+      display:block;
+      text-transform: lowercase;
+    }
+    .header-empresa .header-txt .txt::first-letter {
+      text-transform: uppercase;
+    }
   .header-event .send-info, .header-empresa .send-info {
     width: 391px;
     height: 105px;
