--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -7,7 +7,7 @@
 }
 
 /* HEADER EVENTOS */
-.header-event, .header-empresa {
+.header-event {
   padding: 0;
   box-sizing: border-box;
   z-index: 10;
@@ -55,6 +55,99 @@
       transform: rotate(-9deg);
       text-align: center;
       font-family: Ryssa;
+    }
+  }
+  .send-info {
+    width: 391px;
+    height: 105px;
+    margin-top: 150px;
+    background-color: rgba(0,0,0,0.18);
+    border-radius: 5px;
+    @include flexbox();
+    align-items: center;
+    justify-content: center;
+    .button-send-info {
+      width: 348px;
+      height: 70px;
+      background-color: #F5A623;
+      border-radius: 4px;
+      @include flexbox();
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      a {
+        color: white;
+        font-weight: 300;
+        font-size: 19px;
+        line-height: 27px;
+        padding: 22px 20px;
+        &:hover, &:focus, &:active {
+          text-decoration: none;
+          outline: none;
+          background-color: transparent;
+        }
+      }
+      &:hover {
+        background-color: #D0860C;
+      }
+    }
+  }
+}
+
+.header-empresa {
+  padding: 0;
+  box-sizing: border-box;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 969px;
+  background-color: transparent;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  margin-top: 4px;
+  @include flexbox();
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  transform: rotate(0deg);
+  background-attachment: fixed;
+  .header-container {
+    margin-top: 90px;
+  }
+  .background-image {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 4px;
+    object-fit: cover;
+    z-index: -1;
+    left: 0px;
+  }
+  .header-txt {
+    color: white;
+    @include flexbox();
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 50px;
+    .brush {
+      margin-top: -14px;
+      margin-bottom: 150px;
+    }
+    .txt {
+      font-size: 144px;
+      transform: rotate(-9deg);
+      text-align: center;
+      font-family: Ryssa;
+      display:block;
+      text-transform: lowercase;
+      &:first-letter {
+        text-transform: uppercase;
+      }
     }
   }
   .send-info {
