--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2640,7 +2640,10 @@ html, body {
     width: 80% !important;
     line-height: 28px !important;
     font-size: 20px !important;
-    text-align: left; } }
+    text-align: left; }
+  .whats-on .right-photos .element .txt-container .name {
+    font-size: 25px !important;
+    line-height: 25px !important;} }
 
 @media (max-width: 1100px) {
   .section-txt, .section-txt-comarca {
