--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2967,6 +2967,10 @@ html, body {
     font-size: 20px !important;
     text-align: left;
   }
+  .whats-on .right-photos .element .txt-container .name {
+    font-size: 25px !important;
+    line-height: 25px !important;
+  }
 }
 
 @media (max-width: 1100px) {
