--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -47,22 +47,11 @@
     .header-event .header-txt .brush, .header-empresa .header-txt .brush {
       margin-top: -14px;
       margin-bottom: 150px; }
-    .header-event .header-txt .txt {
+    .header-event .header-txt .txt, .header-empresa .header-txt .txt {
       font-size: 144px;
       transform: rotate(-9deg);
       text-align: center;
       font-family: Ryssa; 
-    }
-    .header-empresa .header-txt .txt {
-      font-size: 144px;
-      transform: rotate(-9deg);
-      text-align: center;
-      font-family: Ryssa; 
-      display:block;
-      text-transform: lowercase;
-    }
-    .header-empresa .header-txt .txt::first-letter {
-      text-transform: uppercase;
     }
   .header-event .send-info, .header-empresa .send-info {
     width: 391px;
